Made characters user specific
